# BattleshipPuzzleGenerator

./: CHANGELOG.md  CMakeLists.txt  README.md  author.md
output/: puzzles_armada.bp  puzzles_matrix.bp
src/: file.cpp  file.h  generator.cpp  main.cpp  puzzle.cpp
src/include/: bpg.h  common.h  file.h
